--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -9,14 +9,25 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "@date-io/date-fns": "^1.3.5",
     "@material-ui/core": "^4.0.0-beta.2",
     "@material-ui/icons": "^3.0.2",
+    "date-fns": "^1.30.1",
+    "draft-js": "^0.10.5",
     "material-ui-icons": "^1.0.0-beta.36",
+    "material-ui-pickers": "^2.2.4",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.13.2",
+    "react-files": "^2.4.8",
+    "react-froala-wysiwyg": "^3.0.0-beta.2",
+    "react-iframe": "^1.8.0",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^5.0.0",
+    "react-scroll-up": "^1.3.3",
+    "react-scroll-up-button": "^1.6.4",
     "save": "^2.4.0"
   },
   "meteor": {
@@ -25,5 +36,8 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "json-loader": "^0.5.7"
   }
 }
