--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.0.0-beta.2",
     "@material-ui/icons": "^3.0.2",
     "date-fns": "^1.30.1",
+    "debug": "^4.1.1",
     "draft-js": "^0.10.5",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-pickers": "^2.2.4",
@@ -24,6 +25,7 @@
     "react-files": "^2.4.8",
     "react-froala-wysiwyg": "^3.0.0-beta.2",
     "react-iframe": "^1.8.0",
+    "react-images": "^0.5.19",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.0.0",
     "react-scroll-up": "^1.3.3",
