--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^5.0.0",
     "react-scroll-up": "^1.3.3",
     "react-scroll-up-button": "^1.6.4",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "sort-json-array": "^0.1.7"
   },
   "meteor": {
     "mainModule": {
