--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
     "react-files": "^2.4.8",
-    "react-froala-wysiwyg": "^3.0.0-beta.2",
+    "react-froala-wysiwyg": "^3.0.0",
     "react-iframe": "^1.8.0",
     "react-images": "^0.5.19",
     "react-quill": "^1.3.3",
