--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^5.0.0",
     "react-scroll-up": "^1.3.3",
     "react-scroll-up-button": "^1.6.4",
+    "react-smooth-dnd": "^0.11.0",
     "save": "^2.4.0",
     "sort-json-array": "^0.1.7",
     "swiper": "^4.5.0"
