--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -18,6 +18,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-pickers": "^2.2.4",
     "meteor-node-stubs": "^0.4.1",
+    "re-resizable": "^5.0.1",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
@@ -28,12 +29,14 @@
     "react-id-swiper": "^2.3.2",
     "react-iframe": "^1.8.0",
     "react-images": "^0.5.19",
+    "react-player": "^1.11.2",
     "react-quill": "^1.3.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scroll-up": "^1.3.3",
     "react-scroll-up-button": "^1.6.4",
     "react-smooth-dnd": "^0.11.0",
+    "react-spinners": "^0.5.13",
     "save": "^2.4.0",
     "sort-json-array": "^0.1.7",
     "swiper": "^4.5.0"
