--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -12,6 +12,7 @@
     "@date-io/date-fns": "^1.3.5",
     "@material-ui/core": "^4.0.0-beta.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^4.0.0-alpha.23",
     "date-fns": "^1.30.1",
     "debug": "^4.1.1",
     "draft-js": "^0.10.5",
