--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^3.7.0",
     "react-id-swiper": "^2.3.2",
     "react-iframe": "^1.8.0",
+    "react-iframe-comm": "^1.2.2",
     "react-images": "^0.5.19",
     "react-player": "^1.11.2",
     "react-quill": "^1.3.3",
@@ -40,6 +41,7 @@
     "react-spinners": "^0.5.13",
     "react-swipeable-views": "^0.13.3",
     "react-swipeable-views-utils": "^0.13.3",
+    "sanitize-html": "^1.20.1",
     "save": "^2.4.0",
     "sort-json-array": "^0.1.7",
     "swiper": "^4.5.0"
