--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -10,19 +10,30 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "@date-io/date-fns": "^1.3.5",
-    "@material-ui/core": "^4.0.0-beta.2",
+    "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.23",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "date-fns": "^1.30.1",
     "debug": "^4.1.1",
     "draft-js": "^0.10.5",
+    "draft-js-anchor-plugin": "^2.0.3",
+    "draft-js-buttons": "^2.0.2",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-inline-toolbar-plugin": "^3.0.1",
+    "draft-js-markdown-plugin": "^3.0.5",
+    "draft-js-plugin-editor": "0.0.0",
+    "eslint-plugin-react": "^7.14.3",
+    "install": "^0.13.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-pickers": "^2.2.4",
     "meteor-node-stubs": "^0.4.1",
+    "npm": "^6.11.2",
     "re-resizable": "^5.0.1",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-burger-menu": "^2.6.10",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-files": "^2.4.8",
     "react-froala-wysiwyg": "^3.0.0",
@@ -57,6 +68,8 @@
     "testModule": "tests/main.js"
   },
   "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "json-loader": "^0.5.7"
   }
 }
