--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -14,10 +14,12 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.23",
     "@monaco-editor/react": "^1.2.1",
+    "bcrypt": "^3.0.6",
     "color-thief": "^2.2.5",
     "date-fns": "^1.30.1",
     "debug": "^4.1.1",
     "draft-js": "^0.10.5",
+    "draft-js-export-html": "^1.4.1",
     "email-deep-validator": "^3.3.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-pickers": "^2.2.4",
