--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -44,6 +44,7 @@
     "react-quill": "^1.3.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
+    "react-scroll": "^1.7.14",
     "react-scroll-up": "^1.3.3",
     "react-scroll-up-button": "^1.6.4",
     "react-smooth-dnd": "^0.11.0",
