Quiz and activities

--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -24,10 +24,14 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-pickers": "^2.2.4",
     "meteor-node-stubs": "^0.4.1",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "re-resizable": "^5.0.1",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.10",
+    "react-component-countdown-timer": "^0.1.1",
     "react-contextmenu": "^2.11.0",
+    "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
     "react-files": "^2.4.8",
@@ -52,6 +56,7 @@
     "react-stopwatch": "^2.0.4",
     "react-swipeable-views": "^0.13.3",
     "react-swipeable-views-utils": "^0.13.3",
+    "react-timer-machine": "^1.0.2",
     "react-unity-webgl": "^7.1.7",
     "sanitize-html": "^1.20.1",
     "save": "^2.4.0",
