Storytelling first proto

--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.23",
     "@monaco-editor/react": "^1.2.1",
+    "@mrblenny/react-flow-chart": "0.0.7",
     "bcrypt": "^3.0.6",
     "color-thief": "^2.2.5",
     "date-fns": "^1.30.1",
@@ -35,6 +36,7 @@
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
     "react-files": "^2.4.8",
+    "react-flow-chart-updated": "^1.0.1",
     "react-froala-wysiwyg": "^3.0.0",
     "react-full-screen": "^0.2.4",
     "react-icons": "^3.7.0",
