Turkish language support added

--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -5,17 +5,18 @@
     "start": "meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
-    "visualize": "meteor --production --extra-packages bundle-visualizer"
+    "visualize": "meteor --production --extra-packages bundle-visualizer",
+    "debug": "meteor run --inspect-brk=9229"
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
-    "@date-io/date-fns": "^1.3.5",
-    "@material-ui/core": "^4.4.1",
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^3.0.2",
-    "@material-ui/lab": "^4.0.0-alpha.23",
-    "@monaco-editor/react": "^1.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.34",
+    "@monaco-editor/react": "^1.2.3",
     "@mrblenny/react-flow-chart": "0.0.7",
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^3.0.7",
     "color-thief": "^2.2.5",
     "date-fns": "^1.30.1",
     "debug": "^4.1.1",
@@ -28,42 +29,42 @@
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "re-resizable": "^5.0.1",
-    "react": "^16.9.0",
-    "react-burger-menu": "^2.6.10",
+    "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-component-countdown-timer": "^0.1.1",
-    "react-contextmenu": "^2.11.0",
+    "react-contextmenu": "^2.13.0",
     "react-countdown-now": "^2.1.1",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-files": "^2.4.8",
-    "react-flow-chart-updated": "^1.0.1",
-    "react-froala-wysiwyg": "^3.0.0",
+    "react-flow-chart-updated": "^1.2.0",
+    "react-froala-wysiwyg": "^3.0.6",
     "react-full-screen": "^0.2.4",
-    "react-icons": "^3.7.0",
-    "react-id-swiper": "^2.3.2",
+    "react-icons": "^3.8.0",
+    "react-id-swiper": "^2.4.0",
     "react-iframe": "^1.8.0",
     "react-iframe-comm": "^1.2.2",
     "react-images": "^0.5.19",
     "react-live-clock": "^3.1.0",
     "react-mic": "^12.4.1",
-    "react-player": "^1.11.2",
+    "react-player": "^1.14.2",
     "react-quill": "^1.3.3",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.1.2",
     "react-scroll": "^1.7.14",
     "react-scroll-up": "^1.3.3",
     "react-scroll-up-button": "^1.6.4",
-    "react-smooth-dnd": "^0.11.0",
+    "react-smooth-dnd": "^0.11.1",
     "react-spinners": "^0.5.13",
     "react-stopwatch": "^2.0.4",
     "react-swipeable-views": "^0.13.3",
     "react-swipeable-views-utils": "^0.13.3",
     "react-timer-machine": "^1.0.2",
-    "react-unity-webgl": "^7.1.7",
+    "react-unity-webgl": "^7.1.9",
     "sanitize-html": "^1.20.1",
     "save": "^2.4.0",
     "sort-json-array": "^0.1.7",
-    "swiper": "^4.5.0",
+    "swiper": "^5.2.1",
     "unrar-js": "^0.2.3",
     "unrar.js": "^0.2.5"
   },
