--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -54,6 +54,7 @@
     "react-scroll": "^1.7.14",
     "react-scroll-up": "^1.3.3",
     "react-scroll-up-button": "^1.6.4",
+    "react-share": "^3.0.1",
     "react-smooth-dnd": "^0.11.1",
     "react-spinners": "^0.5.13",
     "react-stopwatch": "^2.0.4",
