--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -23,6 +23,7 @@
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.4.1",
     "email-deep-validator": "^3.3.0",
+    "material-ui-audio-player": "^1.0.6",
     "material-ui-icons": "^1.0.0-beta.36",
     "material-ui-pickers": "^2.2.4",
     "meteor-node-stubs": "^0.4.1",
@@ -40,11 +41,13 @@
     "react-flow-chart-updated": "^1.2.0",
     "react-froala-wysiwyg": "^3.0.6",
     "react-full-screen": "^0.2.4",
+    "react-h5-audio-player": "^2.0.0-beta.2",
     "react-icons": "^3.8.0",
     "react-id-swiper": "^2.4.0",
     "react-iframe": "^1.8.0",
     "react-iframe-comm": "^1.2.2",
     "react-images": "^0.5.19",
+    "react-images-viewer": "^1.6.2",
     "react-live-clock": "^3.1.0",
     "react-mic": "^12.4.1",
     "react-player": "^1.14.2",
