--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -31,6 +31,7 @@
     "moment-duration-format": "^2.3.2",
     "re-resizable": "^5.0.1",
     "react": "^16.12.0",
+    "react-alice-carousel": "^1.17.1",
     "react-burger-menu": "^2.6.13",
     "react-component-countdown-timer": "^0.1.1",
     "react-contextmenu": "^2.13.0",
@@ -65,6 +66,7 @@
     "react-swipeable-views-utils": "^0.13.3",
     "react-timer-machine": "^1.0.2",
     "react-unity-webgl": "^7.1.9",
+    "react-viewer": "^3.1.0",
     "sanitize-html": "^1.20.1",
     "save": "^2.4.0",
     "sort-json-array": "^0.1.7",
