--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -51,7 +51,11 @@
     "react-images": "^0.5.19",
     "react-images-viewer": "^1.6.2",
     "react-live-clock": "^3.1.0",
+    "react-md": "^1.14.0",
     "react-mic": "^12.4.1",
+    "react-native": "^0.61.5",
+    "react-native-elements": "^1.2.7",
+    "react-native-vector-icons": "^6.6.0",
     "react-player": "^1.14.2",
     "react-quill": "^1.3.3",
     "react-reveal": "^1.2.2",
@@ -83,6 +87,13 @@
     "testModule": "tests/main.js"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "json-loader": "^0.5.7"
-  }
+  },
+  "plugin": [
+    "jsx-a11y"
+  ],
+  "extends": [
+    "plugin: jsx-a11y/recommended"
+  ]
 }
