--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -48,6 +48,7 @@
     "react-id-swiper": "^2.4.0",
     "react-iframe": "^1.8.0",
     "react-iframe-comm": "^1.2.2",
+    "react-image-pan-zoom-rotate": "^1.3.0",
     "react-images": "^0.5.19",
     "react-images-viewer": "^1.6.2",
     "react-live-clock": "^3.1.0",
@@ -58,6 +59,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-player": "^1.14.2",
     "react-quill": "^1.3.3",
+    "react-resizable-rotatable-draggable": "^0.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scroll": "^1.7.14",
