resolved some issues, requirements and styles

--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -17,18 +17,22 @@
     "@monaco-editor/react": "^1.2.3",
     "@mrblenny/react-flow-chart": "0.0.7",
     "bcrypt": "^3.0.7",
+    "bind-decorator": "^1.0.11",
     "color-thief": "^2.2.5",
     "date-fns": "^1.30.1",
     "debug": "^4.1.1",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.4.1",
     "email-deep-validator": "^3.3.0",
+    "material-ui": "^0.20.2",
     "material-ui-audio-player": "^1.0.6",
     "material-ui-icons": "^1.0.0-beta.36",
+    "material-ui-number-input": "^5.0.24",
     "material-ui-pickers": "^2.2.4",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
     "react": "^16.12.0",
     "react-alice-carousel": "^1.17.1",
