--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -61,6 +61,7 @@
     "react-native": "^0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-vector-icons": "^6.6.0",
+    "react-numeric-input": "^2.2.3",
     "react-player": "^1.14.2",
     "react-quill": "^1.3.3",
     "react-resizable-rotatable-draggable": "^0.2.0",
