--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -18,12 +18,14 @@
     "@mrblenny/react-flow-chart": "0.0.7",
     "bcrypt": "^3.0.7",
     "bind-decorator": "^1.0.11",
+    "bootstrap": "^4.4.1",
     "color-thief": "^2.2.5",
     "date-fns": "^1.30.1",
     "debug": "^4.1.1",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.4.1",
     "email-deep-validator": "^3.3.0",
+    "firebase": "^7.8.1",
     "material-ui": "^0.20.2",
     "material-ui-audio-player": "^1.0.6",
     "material-ui-icons": "^1.0.0-beta.36",
