--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.36",
+    "@mcabreradev/filter": "^1.3.5",
     "@monaco-editor/react": "^1.2.3",
     "@mrblenny/react-flow-chart": "0.0.7",
     "bcrypt": "^3.0.7",
@@ -34,6 +35,7 @@
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "object-str-find": "^0.1.1",
     "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
     "react": "^16.12.0",
