--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -89,7 +89,8 @@
     "sort-json-array": "^0.1.7",
     "swiper": "^5.2.1",
     "unrar-js": "^0.2.3",
-    "unrar.js": "^0.2.5"
+    "unrar.js": "^0.2.5",
+    "openbadges-bakery-v2": "^2.1.0"
   },
   "meteor": {
     "mainModule": {
