--- a/SELI-Platform/.vscode/launch.json
+++ b/SELI-Platform/.vscode/launch.json
@@ -1,6 +1,15 @@
 {
   "version": "0.2.0",
   "configurations": [
+  {
+      "type": "node",
+      "request": "attach",
+      "name": "Attach",
+      "port": 9229,
+      "skipFiles": [
+          "<node_internals>/**"
+      ]
+  },
       {
           "type": "chrome",
           "request": "launch",
@@ -16,7 +25,7 @@
           "runtimeArgs": ["run", "debug"],
           "outputCapture": "std",
           "port": 9229,
-          "timeout": 30000
+          "timeout": 60000
       }
   ],
   "compounds": [
