--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -27,6 +27,7 @@
     "draft-js-export-html": "^1.4.1",
     "email-deep-validator": "^3.3.0",
     "firebase": "^7.8.1",
+    "fluent-ffmpeg": "^2.1.2",
     "material-ui": "^0.20.2",
     "material-ui-audio-player": "^1.0.6",
     "material-ui-icons": "^1.0.0-beta.36",
