--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -100,6 +100,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "json-loader": "^0.5.7"
   },
   "plugin": [
