Image's caption position #25

--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -78,6 +78,7 @@
     "react-scroll-up-button": "^1.6.4",
     "react-share": "^3.0.1",
     "react-smooth-dnd": "^0.11.1",
+    "react-speech": "^1.0.2",
     "react-spinners": "^0.5.13",
     "react-stopwatch": "^2.0.4",
     "react-swipeable-views": "^0.13.3",
@@ -88,6 +89,7 @@
     "react-window-size": "^1.2.2",
     "sanitize-html": "^1.20.1",
     "save": "^2.4.0",
+    "semantic-ui-react": "^0.88.2",
     "sort-json-array": "^0.1.7",
     "swiper": "^5.2.1",
     "unrar-js": "^0.2.3",
