--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "@date-io/date-fns": "^1.3.13",
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
+    "@ffprobe-installer/ffprobe": "^1.0.12",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.36",
@@ -26,6 +28,7 @@
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.4.1",
     "email-deep-validator": "^3.3.0",
+    "ffprobe": "^1.1.0",
     "firebase": "^7.8.1",
     "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
@@ -37,6 +40,7 @@
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "node-ffprobe": "github:ListenerApproved/node-ffprobe",
     "object-str-find": "^0.1.1",
     "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
