--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-name: Auto Assign to Project(s)
-
 on:
   issues:
     types: [opened, labeled]
@@ -14,14 +12,14 @@ jobs:
     name: Assign to One Project
     steps:
     - name: Assign issues 'feature request' label to project 3
-      uses: srggrs/assign-one-project-github-action@1.2.0
+      uses: actions/checkout@v2
       if: |
         contains(github.event.issue.labels.*.name, 'Feature Request')
       with:
         project: 'https://github.com/ecureuill/SELIProject/projects/3'
         column_name: 'NEEDS TRIAGE'
     - name: Assign issues 'bugs` label to project 1
-      uses: srggrs/assign-one-project-github-action@1.2.0
+      uses: actions/checkout@v2
       if: |
         contains(github.event.issue.labels.*.name, 'bug') ||
         contains(github.event.issue.labels.*.name, 'bug on next release') ||
