--- a/.github/workflows/assign-one-project-github-action.yml
+++ b/.github/workflows/assign-one-project-github-action.yml
@@ -12,14 +12,14 @@ jobs:
     name: Assign to One Project
     steps:
     - name: Assign issues 'feature request' label to project 3
-      uses: ecureuill/assign-one-project-github-action
+      uses: ecureuill/SELIProject
       if: |
         contains(github.event.issue.labels.*.name, 'Feature Request')
       with:
         project: 'https://github.com/ecureuill/SELIProject/projects/3'
         column_name: 'NEEDS TRIAGE'
     - name: Assign issues 'bugs` label to project 1
-      uses: ecureuill/assign-one-project-github-action
+      uses: ecureuill/SELIProject
       if: |
         contains(github.event.issue.labels.*.name, 'bug') ||
         contains(github.event.issue.labels.*.name, 'bug on next release') ||
