--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,28 @@
+name: Auto Assign to Project(s)
+
 on:
   issues:
     types: [opened, labeled]
-#   pull_request:
-#     types: [opened, labeled]
+  pull_request:
+    types: [opened, labeled]
 env:
-  GITHUB_TOKEN: ${{ secrets.MY_ACTION_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   assign_one_project:
     runs-on: ubuntu-latest
     name: Assign to One Project
     steps:
-    - name: Assign issues 'feature request' label to project 3
+#     - name: Assign NEW issues and NEW pull requests to project 2
+#       uses: srggrs/assign-one-project-github-action@1.2.0
+#       if: github.event.action == 'opened'
+#       with:
+#         project: 'https://github.com/srggrs/assign-one-project-github-action/projects/2'
+
+    - name: Assign issues and pull requests with `bug` label to project 3
       uses: srggrs/assign-one-project-github-action@1.2.0
       if: |
-        contains(github.event.issue.labels.*.name, 'Feature Request')
+        contains(github.event.issue.labels.*.name, 'bug') 
       with:
-        project: 'https://github.com/ecureuill/SELIProject/projects/3'
-        column_name: 'NEEDS TRIAGE'
-    - name: Assign issues 'bugs` label to project 1
-      uses: srggrs/assign-one-project-github-action@1.2.0
-      if: |
-        contains(github.event.issue.labels.*.name, 'bug') ||
-        contains(github.event.issue.labels.*.name, 'bug on next release') ||
-        contains(github.event.issue.labels.*.name, 'issue')
-      with:
-        project: 'https://github.com/ecureuill/SELIProject/projects/1'
+        project: 'https://github.com/srggrs/assign-one-project-github-action/projects/1'
         column_name: 'NEEDS TRIAGE'
