--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,19 @@ jobs:
     runs-on: ubuntu-latest
     name: Assign to One Project
     steps:
-#     - name: Assign NEW issues and NEW pull requests to project 2
-#       uses: srggrs/assign-one-project-github-action@1.2.0
-#       if: github.event.action == 'opened'
-#       with:
-#         project: 'https://github.com/srggrs/assign-one-project-github-action/projects/2'
+     - name: Assign FEATURE REQUEST and to project 3
+       uses: srggrs/assign-one-project-github-action@1.2.0
+       if:  contains(github.event.issue.labels.*.name, 'feature request')
+       with:
+        project: 'https://github.com/ecureuill/SELIProject/projects/1'
+        column_name: 'NEEDS TRIAGE'
 
-    - name: Assign issues and pull requests with `bug` label to project 3
-      uses: srggrs/assign-one-project-github-action@1.2.0
-      if: |
-        contains(github.event.issue.labels.*.name, 'bug') 
-      with:
+     - name: Assign BUG, ISSUE, BUG ON NEXT RELEASE label to project 1
+       uses: srggrs/assign-one-project-github-action@1.2.0
+       if: |
+            contains(github.event.issue.labels.*.name, 'bug') ||
+            contains(github.event.issue.labels.*.name, 'bug on next release') ||
+            contains(github.event.issue.labels.*.name, 'issues')
+       with:
         project: 'https://github.com/ecureuill/SELIProject/projects/1'
         column_name: 'NEEDS TRIAGE'
