Update Auto Assign to Project.yml

--- a/.github/workflows/Auto Assign to Project.yml
+++ b/.github/workflows/Auto Assign to Project.yml
@@ -32,8 +32,7 @@ jobs:
         
      - name: Assign '1 - PLANNING' label to project 4
        uses: srggrs/assign-one-project-github-action@1.2.0
-       if: |
-            contains(github.event.issue.labels.*.name, '1 - Planning')
+       if: contains(github.event.issue.labels.*.name, '1 - Planning')
 
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/4'
