--- a/.github/card-labeler.yml
+++ b/.github/card-labeler.yml
@@ -14,7 +14,7 @@
      - '2 - Ready'
    'CODING':
      - '3 - Working'
-   'CODED':
-     - '4 - In Review'
+  # 'CODED':
+  #   - '4 - In Review'
    'DONE':
      - 
