--- a/.github/workflows/Auto Assign to Project.yml
+++ b/.github/workflows/Auto Assign to Project.yml
@@ -9,6 +9,15 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
+  comment:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Label Commenter
+        uses: peaceiris/actions-label-commenter@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          config_file: .github/label-commenter-config.yml
+     
   assign_one_project:
     runs-on: ubuntu-latest
     name: Assign to One Project
