Update Auto Assign to Project.yml

--- a/.github/workflows/Auto Assign to Project.yml
+++ b/.github/workflows/Auto Assign to Project.yml
@@ -9,18 +9,13 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  triage:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Auto card labeler
-        uses: technote-space/auto-card-labeler@v1
   comment:
     runs-on: ubuntu-18.04
     steps:
       - name: Label Commenter
         uses: peaceiris/actions-label-commenter@v1
         with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           config_file: .github/label-commenter-config.yml       
   assign_one_project:
     runs-on: ubuntu-latest
