--- a/.github/workflows/Auto Assign to Project.yml
+++ b/.github/workflows/Auto Assign to Project.yml
@@ -20,7 +20,7 @@ jobs:
         uses: peaceiris/actions-label-commenter@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # config_file: .github/label-commenter-config.yml
+          config_file: .github/label-commenter-config.yml
   assign_one_project:
     runs-on: ubuntu-latest
     name: Assign to One Project
