--- a/.github/workflows/Auto Assign to Project.yml
+++ b/.github/workflows/Auto Assign to Project.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Label Commenter
         uses: peaceiris/actions-label-commenter@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
   assign_one_project:
     needs: triage
     runs-on: ubuntu-latest
