--- a/.github/card-labeler.yml
+++ b/.github/card-labeler.yml
@@ -14,14 +14,14 @@
      - '2 - Ready'
    'CODING':
      - '3 - Working'   
-#   'CODED':
-#     - '3 - Working'
+   'CODED':
+     - '3 - Working'
 #     - 'need tester'
 
 'FUNCTIONALITY TEST':
    'TO-DO':
      - 'need tester'
-     - '4 - In Review'
+     - '3 - Working'
    'IN PROGRESS':
      - '4 - In Review'
 #   'FAILED':
