--- a/.github/workflows/Auto Assign to Project.yml
+++ b/.github/workflows/Auto Assign to Project.yml
@@ -54,8 +54,9 @@ jobs:
      - name: Assign 'Pull Request' to 'PULL REQUEST CYCLE'
        uses: srggrs/assign-one-project-github-action@1.2.0
        if: |
-          github.event == 'pull_request' &&
+          github.event_name == 'pull_request' &&
           github.event.action == 'opened'
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/7'
         column_name: 'In progress'
+
