--- a/.github/workflows/label_comenter.yml
+++ b/.github/workflows/label_comenter.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Label Commenter
         uses: peaceiris/actions-label-commenter@v1
         with:
-          github_token: ${{ secrets.actions }}
+          github_token: ${{ secrets.MY_ACTION_TOKEN }}
           # config_file: .github/label-commenter-config.yml
