--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
     steps:
      - name: Assign 'FEATURE REQUEST' to 'TRIAGE - FEATURE REQUEST'
        uses: srggrs/assign-one-project-github-action@1.2.0
-       if:  contains(github.event.issue.labels.*.name, 'feature request')
+       if:  |
+        github.event == 'issue' &&
+        contains(github.event.issue.labels.*.name, 'feature request')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/3'
         column_name: 'NEEDS TRIAGE'
@@ -43,30 +45,37 @@ jobs:
      - name: Assign 'BUG', 'ISSUE',' BUG ON NEXT RELEASE' label to 'TRIAGE - Bugs'
        uses: srggrs/assign-one-project-github-action@1.2.0
        if: |
+            github.event == 'issue' && (
             contains(github.event.issue.labels.*.name, 'bug') ||
             contains(github.event.issue.labels.*.name, 'bug on next release') ||
-            contains(github.event.issue.labels.*.name, 'issues')
+            contains(github.event.issue.labels.*.name, 'issues'))
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/1'
         column_name: 'NEEDS TRIAGE'
         
      - name: Assign '1 - PLANNING' label to 'FEATURE SPECIFICATION'
        uses: srggrs/assign-one-project-github-action@1.2.0
-       if: contains(github.event.issue.labels.*.name, '1 - Planning')
+       if: |
+            github.event == 'issue' &&
+            contains(github.event.issue.labels.*.name, '1 - Planning')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/4'
         column_name: 'PENDING FEATURE REQUEST'
 
      - name: Assign '2 - READY' label to 'DEVELOPMENT CYCLE'
        uses: srggrs/assign-one-project-github-action@1.2.0
-       if: contains(github.event.issue.labels.*.name, '2 - Ready')
+       if: |
+            github.event == 'issue' &&
+            contains(github.event.issue.labels.*.name, '2 - Ready')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/2'
         column_name: 'TO-DO'
 
      - name: Assign 'need tester' label to 'FUNCTIONALITY TEST CYCLE'
        uses: srggrs/assign-one-project-github-action@1.2.0
-       if: contains(github.event.issue.labels.*.name, 'need tester')
+       if: |
+            github.event == 'issue' &&
+            contains(github.event.issue.labels.*.name, 'need tester')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/6'
         column_name: 'TO-DO'
