--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ on:
     types: [labeled, unlabeled]
   pull_request:
     types: [labeled, unlabeled]
+  project_card:
+    types: [moved]
 env:
   GITHUB_TOKEN: ${{ secrets.MY_ACTION_TOKEN }}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
