--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
      - name: Assign 'FEATURE REQUEST' to 'TRIAGE - FEATURE REQUEST'
        uses: srggrs/assign-one-project-github-action@1.2.0
        if:  |
-        github.event == 'issue' &&
+        github.event_name == 'issue' &&
         contains(github.event.issue.labels.*.name, 'feature request')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/3'
@@ -47,7 +47,7 @@ jobs:
      - name: Assign 'BUG', 'ISSUE',' BUG ON NEXT RELEASE' label to 'TRIAGE - Bugs'
        uses: srggrs/assign-one-project-github-action@1.2.0
        if: |
-            github.event == 'issue' && (
+            github.event_name == 'issue' && && github.event.action == 'labeled' && (
             contains(github.event.issue.labels.*.name, 'bug') ||
             contains(github.event.issue.labels.*.name, 'bug on next release') ||
             contains(github.event.issue.labels.*.name, 'issues'))
@@ -58,7 +58,7 @@ jobs:
      - name: Assign '1 - PLANNING' label to 'FEATURE SPECIFICATION'
        uses: srggrs/assign-one-project-github-action@1.2.0
        if: |
-            github.event == 'issue' &&
+            github.event_name == 'issue' &&
             contains(github.event.issue.labels.*.name, '1 - Planning')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/4'
@@ -67,7 +67,7 @@ jobs:
      - name: Assign '2 - READY' label to 'DEVELOPMENT CYCLE'
        uses: srggrs/assign-one-project-github-action@1.2.0
        if: |
-            github.event == 'issue' &&
+            github.event_name == 'issue' &&
             contains(github.event.issue.labels.*.name, '2 - Ready')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/2'
@@ -76,7 +76,7 @@ jobs:
      - name: Assign 'need tester' label to 'FUNCTIONALITY TEST CYCLE'
        uses: srggrs/assign-one-project-github-action@1.2.0
        if: |
-            github.event == 'issue' &&
+            github.event_name == 'issue' &&
             contains(github.event.issue.labels.*.name, 'need tester')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/6'
