--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
        if: |
             contains(github.event.issue.labels.*.name, 'bug') ||
             contains(github.event.issue.labels.*.name, 'bug on next release') ||
-            contains(github.event.issue.labels.*.name, 'issues'))
+            contains(github.event.issue.labels.*.name, 'issues')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/1'
         column_name: 'NEEDS TRIAGE'
