--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
     if: github.event.action == 'labeled' || github.event.action == 'unlabeled' 
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: master
+
       - name: Label Commenter
         uses: peaceiris/actions-label-commenter@v1.3.2
         with:
