--- a/.github/card-labeler.yml
+++ b/.github/card-labeler.yml
@@ -1,4 +1,11 @@
-  
+TRIAGE - Feature Request:
+  'UP NEXT':
+    - '1 - Planning'
+  'IN FUTURE':
+    - '0 - Backlog'
+  'IN DISCUSSION':
+    - 'Discussion'
+
 DEVELOPMENT CYCLE:
   'TO-DO':
     - '2 - Ready'
@@ -23,11 +30,3 @@ FUNCTIONALITY TEST:
   'SUCCESSFUL':
     - '4 - In Review'
     - 'test-FTpass'
-
-TRIAGE - Feature Request:
-  - 'UP NEXT':
-    - '1 - Planning'
-  - 'IN FUTURE':
-    - '0 - Backlog'
-  - 'IN DISCUSSION':
-    - 'Discussion'
