--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
 
 
   assign_one_project:
+    needs: triage
  #   if: github.event_name != 'project_card' # && github.event.action == 'labeled'
     runs-on: ubuntu-latest
     name: AssignToProject
