--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     steps:
      - name: Assign 'FEATURE REQUEST' to 'TRIAGE - FEATURE REQUEST'
        uses: srggrs/assign-one-project-github-action@1.2.0
-       if: contains(github.event.issue.labels.*.name, 'feature request')
+       if: contains(github.event.issue.labels.*.name, 'Feature Request')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/3'
         column_name: 'NEEDS TRIAGE'
@@ -64,9 +64,7 @@ jobs:
         
      - name: Assign '1 - PLANNING' label to 'FEATURE SPECIFICATION'
        uses: srggrs/assign-one-project-github-action@1.2.0
-       if: |
-            github.event_name == 'issue' &&
-            contains(github.event.issue.labels.*.name, '1 - Planning')
+       if: contains(github.event.issue.labels.*.name, '1 - Planning')
        with:
         project: 'https://github.com/ecureuill/SELIProject/projects/4'
         column_name: 'PENDING FEATURE REQUEST'
